[package]
name = "rs-docker"
version = "0.1.0"
authors = ["dpouris <jimpouris0@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "^0.11", features = ["json", "blocking"] }
bytes = "1.3.0"
tokio = { version = "1.23.0", features = ["full"] }
libc = "^0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.59"
thiserror = "1.0.32"
tempfile = "3"
regex = "1"
flate2 = "1.0.25"
tar = "0.4.38"
interm = "0.1.1"
async-recursion = "1.0.5"
